# fake_news_detector

./: .gitignore  README.md  embedding-generation.ipynb  model-training.ipynb  pyproject.toml
