[tool.poetry]
name = "fake-news-detector"
version = "0.1.0"
description = "Project to detect fake news"
authors = ["Victor Martin <victormartingarbero@outlook.es>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "^1.5.1"
matplotlib = "^3.9.2"
jupyter = "^1.1.1"
pandas = "~2.0"
numpy = "~1.25"
nltk = "^3.9.1"
gensim = "^4.3.3"
mlflow = "^2.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
